k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tese-marketplace
  labels:
    name: tese-marketplace
