k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace-backend
  namespace: tese-marketplace
  labels:
    app: marketplace-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketplace-backend
  template:
    metadata:
      labels:
        app: marketplace-backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/tese-io/marketplace-backend:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: marketplace-backend-service
  namespace: tese-marketplace
spec:
  selector:
    app: marketplace-backend
  ports:
  - name: http
    port: 9000
    targetPort: 9000
    nodePort: 30900
  type: NodePort
